small fix on 1.1.4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
 
 
 
-    <string name="version">"版本号:V1.1.4\n\n\n1. 优化代码结构整理架构\n2. 为2.0版本大更新做准备\n3. 增加在线GitHub查看"</string>
+    <string name="version">"版本号:V1.1.4\n\n\n1. 优化代码结构整理架构\n2. 为2.0版本大更新做准备\n3. 增加在线GitHub查看\n"</string>
 
 </resources>
