--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,8 @@
 <resources>
     <string name="app_name">BuptRoom</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"作者：Thinkwee|Sworduo\nEmail:thinkwee2767@gmail.com\n版本:V1.2.2\n\n本项目开源，Github地址\ngithub.com/thinkwee/BuptRoom.git\n"</string>
-
-
-
-    <string name="version">"版本号:V1.2.2\n\n\n1. 全新开场动画\n2. 教室界面卡片化\n"</string>
-
+    <string name="devoloper_openresource_string">"作者：Thinkwee|Sworduo\nEmail:thinkwee2767@gmail.com\n版本:V1.2.3\n\n本项目开源，Github地址\ngithub.com/thinkwee/BuptRoom.git\n"</string>
+    <string name="version">"版本号:V1.2.3\n\n\n1. 增加摇一摇界面（纯属测试恶搞）\n2. 优化内存\n3. 修复了启动通知的一些bug\n4. 增加了个人统计界面"</string>
 </resources>
