--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\nEmail:thinkwee2767@gmail.com\n版本:V1.2.4\n\n本项目开源，Github地址\ngithub.com/thinkwee/BuptRoom.git\n"</string>
-    <string name="version">"版本号:V1.2.4\n\n1. 增加离线功能\n2. 修复了一些界面bug\n"</string>
+    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\nEmail:thinkwee2767@gmail.com\n版本:V1.2.5\n\n本项目开源，Github地址\ngithub.com/thinkwee/BuptRoom.git\n"</string>
+    <string name="version">"版本号:V1.2.5\n\n1. 增加教室推荐功能(摇一摇)\n2. 修复了一些小bug\n3. 压缩了安装包体积\n4. 更新菜单图标\n"</string>
 </resources>
