--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,67 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\nEmail:thinkwee2767@gmail.com\n版本:V1.2.5\n\n本项目开源，Github地址\ngithub.com/thinkwee/BuptRoom.git\n"</string>
-    <string name="version">"版本号:V1.2.5\n\n1. 增加教室推荐功能(摇一摇)\n2. 修复了一些小bug\n3. 压缩了安装包体积\n4. 更新菜单图标\n"</string>
+    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\n\n版本:V1.2.5\n\n项目托管:Github\n分发:Fir.im\n"</string>
+    <string name="version">"版本号:V1.2.6\n\n1. 增加检查更新\n2. 修复了一些小bug\n3. 优化代码\n\n"</string>
+    <string name="version_history">"\n历史更新\n2016.10.17 22：04 版本1.2.6
+1. 增加检查更新
+2. 修复了一些小bug
+3. 优化代码
+
+2016.10.15 19：19 版本1.2.5
+1. 增加教室推荐功能(摇一摇)
+2. 修复了一些小bug
+3. 压缩了安装包体积
+4. 更新菜单图标
+
+2016.10.15 12：00 版本1.2.4
+1. 增加离线功能
+2. 修复了一些界面
+
+2016.10.14 10：58 版本1.2.3
+1. 增加摇一摇界面（纯属测试恶搞）
+2. 优化内存
+3. 修复了启动通知的一些bug
+4. 增加了个人统计界面
+
+2016.10.10 23：25 版本1.2.2
+1. 全新开始画面
+2. 教室界面卡片化
+
+2016.10.9 20：32 版本1.2.1
+1. 全新背景
+2. 主题设置界面占位
+
+2016.10.8 21：35 版本1.2.0
+1. 全新查看教室界面
+2. 优化代码
+
+2016.9.29 20:42 版本1.1.4
+1. 优化代码结构整理架构
+2. 为2.0版本大更新做准备
+3. 增加在线GitHub查看
+4. 沉浸式状态栏
+5. 移除悬浮按钮，回归右上角菜单，增加发送bug到作者邮箱
+
+2016.9.28 10:44 版本1.1.3
+1. 增加启动通知
+2. 解决网络错误响应
+
+2016.9.27 18:50 版本1.1.2hotfix
+1. 增加楼层显示
+2. 优化代码结构
+
+2016.9.25 9:48 版本1.1.1hotfix
+1. 修复了图书馆模块
+2. 优化显示界面
+3. 修复了无空闲教室bug
+4. 版本信息增加
+
+2016.9.25 17:33 版本1.1
+1. 优化显示界面
+2. 添加版本信息
+3. 添加显示时间和显示时间段功能，增加每日问候
+
+2016.9.25 15:00 版本1.0
+1. 完成基本目标，能够查看教室信息并分类"</string>
 </resources>
