--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\n\n版本:V1.2.7\n\n项目托管:Github\n分发:Fir.im\n"</string>
-    <string name="version">"未来计划\n1.2.9版本计划
+    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\n\n版本:V1.2.9\n\n项目托管:Github\n分发:Fir.im\n"</string>
+    <string name="version">"未来计划\n1.3.0版本计划
 1. 课表功能
 2. 校招feed流
 3. 优化离线功能\n"</string>
-    <string name="version_history">"当前版本1.2.8
-1. 修复升级bug
-2. 增加了分享选项\n"</string>
+    <string name="version_history">"当前版本1.2.9
+1. 现在当前时间的教室卡片会用绿色标出
+2. 加强了分享选项\n"</string>
 </resources>
