--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"开发：Thinkwee\n测试：Sworduo\n\n版本:V1.4.0 、项目托管:Github\n分发:Fir.im\n"</string>
-    <string name="version">"未来计划\n
-        1.5.0版本计划\n
-        1. 课表功能\n
-        2. 校招feed流\n
-        3. 多线程优化\n"</string>
-    <string name="version_history">"当前版本1.4.0\n
-        1. 可以设置主题了(也因此最低版本要求5.0)\n
-        2. 大幅度优化底层代码\n
-        3. 优化了文件存储\n"</string>
+    <string name="devoloper_openresource_string">"开发\nThinkwee\n测试\nSworduo\n\n版本:V1.5.0\n\n项目开源:\nhttps://github.com/thinkwee/BuptRoom\n分发\nFir.im"</string>
+    <string name="version">"1.6.0版本计划\n1. 课表功能\n2. 校招feed流\n3. 多线程优化\n"</string>
+    <string name="version_history">"当前版本1.5.0\n1. 重写了网络爬取\n2.现在支持刷新重载教室信息\n3. 解决了动画卡顿问题\n4. 优化UI\n"</string>
     <string name="just_a_test_of_version">Just a test of Version</string>
 </resources>
