--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"开发\nThinkwee\n测试\nSworduo\n\n版本:V1.5.0\n\n项目开源:\nhttps://github.com/thinkwee/BuptRoom\n分发\nFir.im"</string>
-    <string name="version">"1.6.0版本计划\n1. 课表功能\n2. 校招feed流\n3. 多线程优化\n"</string>
-    <string name="version_history">"当前版本1.5.0\n1. 重写了网络爬取\n2.现在支持刷新重载教室信息\n3. 解决了动画卡顿问题\n4. 优化UI\n"</string>
+    <string name="devoloper_openresource_string">"开发\nThinkwee\n测试\nSworduo\n\n版本:V1.6.0\n\n项目开源:\nhttps://github.com/thinkwee/BuptRoom\n分发\nFir.im"</string>
+    <string name="version">"1.7.0版本计划\n1. 课表功能\n2. 校招feed流\n"</string>
+    <string name="version_history">"当前版本1.6.0\n1. 修复了初始化拉取教室信息的错误\n2.全新视觉\n3. 重新设计了消息提醒\n"</string>
     <string name="just_a_test_of_version">Just a test of Version</string>
     <string name="welcomestring">“We\'re here to put a dent in the universe”</string>
     <string name="welcometitle">BuptRoom</string>
