--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="devoloper_openresource_string">"开发\nThinkwee\n测试\nSworduo\n\n版本:V1.6.0\n\n项目开源:\nhttps://github.com/thinkwee/BuptRoom\n分发\nFir.im"</string>
-    <string name="version">"1.7.0版本计划\n1. 课表功能\n2. 校招feed流\n"</string>
-    <string name="version_history">"当前版本1.6.5\n 1.规范代码，删除了大量冗余代码"</string>
+    <string name="devoloper_openresource_string">"开发\nThinkwee\n测试\nSworduo\n\n版本:V1.6.5\n\n项目开源:\nhttps://github.com/thinkwee/BuptRoom\n分发\nFir.im"</string>
+    <string name="version">"1.7.0版本计划\n随缘更新\n"</string>
+    <string name="version_history">"当前版本1.6.5\n 1.规范代码\n更新Android版本支持\n"</string>
     <string name="just_a_test_of_version">Just a test of Version</string>
     <string name="welcomestring">“We\'re here to put a dent in the universe”\n</string>
     <string name="welcometitle">BuptRoom</string>
